--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier 'src/' --write"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
