--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
